# Detecting-Credit-Card-Fraud

./: .gitignore  README.md  pyproject.toml
src/: PracticeNotebook.ipynb  data_utils.py  main_model.py  main_model_notebook.ipynb
